--- a/Jenny.Front/Jenny.front.csproj
+++ b/Jenny.Front/Jenny.front.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>Jenny_front</RootNamespace>
+    <RootNamespace>Jenny.front</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <NoWarn>$(NoWarn);CA1416</NoWarn>
