--- a/Jenny.Core/Jenny.Core.csproj
+++ b/Jenny.Core/Jenny.Core.csproj
@@ -8,6 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AudioSwitcher.AudioApi.CoreAudio" Version="3.0.3" />
+    <PackageReference Include="Google.Cloud.TextToSpeech.V1" Version="3.8.0" />
+    <PackageReference Include="NAudio" Version="2.2.1" />
     <PackageReference Include="System.Speech" Version="8.0.0" />
   </ItemGroup>
 </Project>
