added secrets to my project

--- a/Jenny.Core/Jenny.Core.csproj
+++ b/Jenny.Core/Jenny.Core.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="AudioSwitcher.AudioApi.CoreAudio" Version="3.0.3" />
     <PackageReference Include="Google.Cloud.TextToSpeech.V1" Version="3.8.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="8.0.1" />
     <PackageReference Include="NAudio" Version="2.2.1" />
     <PackageReference Include="System.Speech" Version="8.0.0" />
   </ItemGroup>
